# yandex-music-downloader

./: README.md  pyproject.toml
ymd/: api.py  cli.py  core.py  text_utils.py
